--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "webgl",
+  "name": "your-name",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js"
   },
